--- a/src/app/targets/targets.component.html
+++ b/src/app/targets/targets.component.html
@@ -18,24 +18,30 @@
       </ng-container>
 
       <ng-container matColumnDef="thumbs">
-        <th mat-header-cell *matHeaderCellDef>Thumbs</th>
-        <td mat-cell *matCellDef="let element">
+        <th mat-header-cell *matHeaderCellDef style="width: 100px;">Thumbs</th>
+        <td mat-cell *matCellDef="let element" class="thumbs">
           <mat-icon>thumb_up</mat-icon> {{ element.thumbs_up }}
           <mat-icon>thumb_down</mat-icon> {{ element.thumbs_down }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="distance">
-        <th mat-header-cell *matHeaderCellDef>Afstand</th>
+        <th mat-header-cell *matHeaderCellDef style="width: 100px;">Afstand</th>
         <td mat-cell *matCellDef="let element">{{ getDistance(element) / 1000 | number:'1.0-2' }} km</td>
       </ng-container>
 
       <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef></th>
+        <th mat-header-cell *matHeaderCellDef style="width: 120px;"></th>
         <td mat-cell *matCellDef="let element" class="table-actions">
-          <a mat-button [routerLink]="'/targets/' + element._id">Bekijken</a>
-          <a mat-button *ngIf="player && (player._id == element.player._id || player.isAdmin())" [routerLink]="'/targets/' + element._id + '/edit'">Aanpassen</a>
-          <button mat-button *ngIf="player && (player._id == element.player._id || player.isAdmin())" (click)="deleteTarget(element)">Verwijderen</button>
+          <a mat-icon-button [routerLink]="'/targets/' + element._id" matTooltip="Target bekijken">
+            <mat-icon>room</mat-icon>
+          </a>
+          <a mat-icon-button *ngIf="player && (player._id == element.player._id || player.isAdmin())" [routerLink]="'/targets/' + element._id + '/edit'" matTooltip="Target aanpassen">
+            <mat-icon>create</mat-icon>
+          </a>
+          <button mat-icon-button *ngIf="player && (player._id == element.player._id || player.isAdmin())" (click)="deleteTarget(element)" matTooltip="Target verwijderen">
+            <mat-icon>clear</mat-icon>
+          </button>
         </td>
       </ng-container>
 
