Resolvers toegevoegd & player module

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -3,12 +3,12 @@
   <a mat-button routerLink="/targets">Targets</a>
   <a mat-button routerLink="/players">Spelers</a>
   <div class="flex-spacer"></div>
-  <a mat-button routerLink="/login" *ngIf="!player">Inloggen</a>
+  <a mat-button routerLink="/auth/login" *ngIf="!player">Inloggen</a>
   <button mat-button [matMenuTriggerFor]="appMenu" *ngIf="player">{{ player.name }}<span *ngIf="player.isAdmin()"> (admin)</span></button>
 </nav>
 
 <mat-menu #appMenu="matMenu">
   <a mat-menu-item *ngIf="player" [routerLink]="'/players/' + player.username">Profiel</a>
   <mat-divider></mat-divider>
-  <a mat-menu-item routerLink="/logout">Uitloggen</a>
+  <a mat-menu-item routerLink="/auth/logout">Uitloggen</a>
 </mat-menu>
