--- a/src/app/attempts/attempts/attempts.component.html
+++ b/src/app/attempts/attempts/attempts.component.html
@@ -10,8 +10,13 @@
       </ng-container>
 
       <ng-container matColumnDef="player">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header="player.name">Speler</th>
+        <th mat-header-cell *matHeaderCellDef>Speler</th>
         <td mat-cell *matCellDef="let element">{{ element.player.name }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="target">
+        <th mat-header-cell *matHeaderCellDef>Target</th>
+        <td mat-cell *matCellDef="let element">{{ element.target.title }}</td>
       </ng-container>
 
       <ng-container matColumnDef="actions">
