--- a/src/app/players/players/players.component.html
+++ b/src/app/players/players/players.component.html
@@ -9,6 +9,11 @@
         <td mat-cell *matCellDef="let element">{{ element.name }}</td>
       </ng-container>
 
+      <ng-container matColumnDef="score">
+        <th mat-header-cell *matHeaderCellDef style="width: 80px;">Score</th>
+        <td mat-cell *matCellDef="let element">{{ element.score }}</td>
+      </ng-container>
+
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef style="width: 120px;"></th>
         <td mat-cell *matCellDef="let element" class="table-actions">
