--- a/src/app/targets/targets/targets.component.html
+++ b/src/app/targets/targets/targets.component.html
@@ -13,15 +13,14 @@
       </ng-container>
 
       <ng-container matColumnDef="player">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header="player.name">Speler</th>
+        <th mat-header-cell *matHeaderCellDef>Speler</th>
         <td mat-cell *matCellDef="let element">{{ element.player.name }}</td>
       </ng-container>
 
       <ng-container matColumnDef="thumbs">
         <th mat-header-cell *matHeaderCellDef style="width: 100px;">Thumbs</th>
         <td mat-cell *matCellDef="let element" class="thumbs">
-          <mat-icon>thumb_up</mat-icon> {{ element.thumbs_up }}
-          <mat-icon>thumb_down</mat-icon> {{ element.thumbs_down }}
+          <app-thumbs [target]="element"></app-thumbs>
         </td>
       </ng-container>
 
